<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/apChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:chipSpacingHorizontal="16dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/apChipToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_chip_text_today"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/apChipTwoWeeks"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_chip_text_two_weeks"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/apChipMonth"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_chip_text_month"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/apChipThreeMonths"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_chip_text_three_months"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/apChipSixMonths"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_chip_text_six_months"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/arterialPressureList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apChipGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/ap_item"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/apDetailsCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_add_icon"
        android:contentDescription="@string/ap_details_fab_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>