<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/apDetailsMorningLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ap_details_morning"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apDetailsMorningData"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/ap_details_hint"
        app:endIconMode="clear_text"
        app:helperText="@string/ap_details_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apDetailsMorningLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apDetailsMorningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890/"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/apDetailsEveningLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ap_details_evening"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apDetailsMorningData" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apDetailsEveningData"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/ap_details_hint"
        app:endIconMode="clear_text"
        app:helperText="@string/ap_details_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apDetailsEveningLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apDetailsEveningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890/"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/apDetailsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/ap_details_fab_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>